New css configuration

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -2,3 +2,9 @@ easy_admin:
     entities:
         # List the entity class name you want to manage
         - App\Entity\Post
+    site_name: 'Admin'
+    design:
+        menu:
+            - { label: 'Home', url: '/' }
+            - { entity: 'Post', params: { sortDirection: 'ASC' } }
+       
