--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -32,3 +32,5 @@ framework:
         packages:
             frontend:
                 base_path: 'assets'
+    templating:
+        engines: ['twig']
