--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^1.17",
+        "friendsofsymfony/oauth-server-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0",
         "mediamonks/rest-api-bundle": "~3.0",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
@@ -14,6 +16,7 @@
         "symfony/maker-bundle": "^1.4",
         "symfony/orm-pack": "^1.0",
         "symfony/phpunit-bridge": "^4.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
