Add login with Google

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    fousb_userprovider.class: App\Providers\FOSUBUserProvider
+
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +28,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    fousb_userprovider:
+        class: "%fousb_userprovider.class%"
+        arguments: ['@fos_user.user_manager',{ google: google_id}]
