--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         "easycorp/easyadmin-bundle": "^1.17",
         "friendsofsymfony/oauth-server-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "~2.0",
+        "hwi/oauth-bundle": "^0.6.2",
         "mediamonks/rest-api-bundle": "~3.0",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/httplug-bundle": "^1.10",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
