--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,13 @@
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.4",
         "symfony/orm-pack": "^1.0",
-        "symfony/phpunit-bridge": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/browser-kit": "^4.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "config": {
         "preferred-install": {
